# dpm-trace

./: .dpm-trace.example.json  .gitignore  README.md  component.yaml  pyproject.toml  setup.py
docs/: README.md  integration-tests.md
examples/: devnet-trace-poc.conf
scripts/: install-local-dpm-trace.sh
src/dpm_trace/: __init__.py  cli.py
tests/: check-command-build.py  check-compare.py  check-stepper.py  check-submit-failure.py  check-test-report.py  command-build.test  compare-prepared-vs-completion-full.test  compare-prepared-vs-completion.test  compare-prepared-vs-update-full.test  compare-prepared-vs-update.test  compare-update-vs-update-full.test  compare-update-vs-update.test  participant-admin-warning.test  stepper-logic.test  submit-failure-debug.test  submit-failure-full.test  submit-failure.test
tests/fixtures/: Sample.daml
tests/fixtures/compare/: completion-fail.json  completion-ok.json
