[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dpm-trace"
version = "0.1.0"
description = "POC for participant-scoped Canton transaction visualization and comparison."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
dpm-trace = "dpm_trace.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
